tests/__snapshots__/validation-target-range-with-not-supported-version-stderr.snap.txt
Error: TypeScript version '3.2' is not supported.

Use the '--list' command line option to inspect the list of supported versions.

  1 | {
  2 |   "target": [
  3 |     ">=3.2"
    |     ~~~~~~~
  4 |   ],
  5 |   "testFileMatch": [
  6 |     "examples/*.tst.*"

      at ./tstyche.config.json:3:5

